Fix for the social button overlap

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1280,3 +1280,8 @@ article .time-lapse-big.related.large {
     bottom: 0;
   }
 }
+
+// Fix for overlap of the social media buttons
+.share-button.twitter {
+  margin-right: 10px;
+}
